[package]
name = "numerologie_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
#cgi = "0.6"
cgi = { path = "./lib/rust-cgi" }
html-escape = "0.2.13"
numerobis-tournevis = { path = ".." }